@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove metaserver1 support from server.
+lib/settings: Remove settings for metaserver1, add not to update metaserver2
+server/init.c, socket/metaserver.c: Remove code
+MSW 2011-01-22
+
 Don't put artifacts on active list. This fixes boots of mobility and also avoids
 an [Error] in the log.
 Nicolas Weeger 2011-01-08
